# research-q-a-project

./: .gitignore  README.md  agent.py  capstone_streamlit.py  day13_capstone.ipynb  main.py  note  pyproject.toml  requirements.txt
.ipynb_checkpoints/: day13_capstone-checkpoint.ipynb
src/: config.py  evaluator.py  extractor.py  graph.py  knowledge_base.py  nodes.py  state.py  tools.py
